--- a/ArduinoMega/platformio.ini
+++ b/ArduinoMega/platformio.ini
@@ -8,10 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:arduinoUno]
+[env:arduinoMega]
 platform = atmelavr
-board = uno
+board = megaatmega2560
+build_flags = -specs=specs-atmega2560
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	waspinator/AccelStepper@^1.64
 	thijse/CmdMessenger@^4.1.0
