--- a/ArduinoUno/platformio.ini
+++ b/ArduinoUno/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:arduinoMega]
+[env:arduinoUno]
 platform = atmelavr
-board = megaatmega2560
+board = uno
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
@@ -18,6 +18,3 @@ lib_deps =
 	thijse/CmdMessenger@^4.1.0
 	adafruit/Adafruit PWM Servo Driver Library@^3.0.1
 	adafruit/Adafruit NeoPixel@^1.11.0
-	adafruit/Adafruit BusIO@^1.14.5
-	Wire
-	SPI
