--- a/ArduinoUno/platformio.ini
+++ b/ArduinoUno/platformio.ini
@@ -13,6 +13,7 @@ platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 115200
+build_flags = -Wl,-Map,output.map
 lib_deps = 
 	thijse/CmdMessenger@^4.1.0
 	adafruit/Adafruit PWM Servo Driver Library@^3.0.1
